tests/rosetta/out/C/blum-integer.error
cc: exit status 1
/tmp/blum-integer.c: In function ‘mochi_main’:
/tmp/blum-integer.c:200:27: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  200 |               line = line + padLeft(blum.data[idx], 3) + " ";
      |                           ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                             |
      |                             char *
