tests/rosetta/out/C/blum-integer.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:46Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:46Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static int index_of_string(char *s, char *sub) {
  char *pos = strstr(s, sub);
  if (!pos)
    return -1;
  return pos - s;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int isPrime(int n) {
  if (n < 2) {
    return 0;
  }
  if (n % 2 == 0) {
    return n == 2;
  }
  if (n % 3 == 0) {
    return n == 3;
  }
  int d = 5;
  while (d * d <= n) {
    if (n % d == 0) {
      return 0;
    }
    d = d + 2;
    if (n % d == 0) {
      return 0;
    }
    d = d + 4;
  }
  return 1;
}

int firstPrimeFactor(int n) {
  if (n == 1) {
    return 1;
  }
  if (n % 3 == 0) {
    return 3;
  }
  if (n % 5 == 0) {
    return 5;
  }
  list_int inc = list_int_create(8);
  inc.data[0] = 4;
  inc.data[1] = 2;
  inc.data[2] = 4;
  inc.data[3] = 2;
  inc.data[4] = 4;
  inc.data[5] = 6;
  inc.data[6] = 2;
  inc.data[7] = 6;
  int k = 7;
  int i = 0;
  while (k * k <= n) {
    if (n % k == 0) {
      return k;
    }
    k = k + inc.data[i];
    i = (i + 1) % 8;
  }
  return n;
}

int indexOf(char *s, char *ch) {
  int i = 0;
  while (i < strlen(s)) {
    if (slice_string(s, i, i + 1) == ch) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

char *padLeft(int n, int width) {
  char *tmp1 = _str(n);
  char *s = tmp1;
  while (strlen(s) < width) {
    char *tmp2 = concat_string(" ", s);
    s = tmp2;
  }
  return s;
}

char *formatFloat(double f, int prec) {
  char *tmp3 = _str(f);
  char *s = tmp3;
  int idx = index_of_string(s, ".");
  if (idx < 0) {
    return s;
  }
  int need = idx + 1 + prec;
  if (strlen(s) > need) {
    return slice_string(s, 0, need);
  }
  return s;
}

int mochi_main() {
  list_int blum = list_int_create(0);
  list_int counts = list_int_create(4);
  counts.data[0] = 0;
  counts.data[1] = 0;
  counts.data[2] = 0;
  counts.data[3] = 0;
  list_int digits = list_int_create(4);
  digits.data[0] = 1;
  digits.data[1] = 3;
  digits.data[2] = 7;
  digits.data[3] = 9;
  int i = 1;
  int bc = 0;
  while (1) {
    int p = firstPrimeFactor(i);
    if (p % 4 == 3) {
      int q = (int)((((double)i) / ((double)p)));
      if (q != p && q % 4 == 3 && isPrime(q)) {
        if (bc < 50) {
          int tmp4_data[1];
          list_int tmp4 = {1, tmp4_data};
          tmp4.data[0] = i;
          list_int tmp5 = concat_list_int(blum, tmp4);
          blum = tmp5;
        }
        int d = i % 10;
        if (d == 1) {
          counts.data[0] = counts.data[0] + 1;
        } else if (d == 3) {
          counts.data[1] = counts.data[1] + 1;
        } else if (d == 7) {
          counts.data[2] = counts.data[2] + 1;
        } else if (d == 9) {
          counts.data[3] = counts.data[3] + 1;
        }
        bc = bc + 1;
        if (bc == 50) {
          printf("First 50 Blum integers:\n");
          int idx = 0;
          while (idx < 50) {
            char *line = "";
            int j = 0;
            while (j < 10) {
              line = line + padLeft(blum.data[idx], 3) + " ";
              idx = idx + 1;
              j = j + 1;
            }
            printf("%s\n", slice_string(line, 0, strlen(line) - 1));
          }
          break;
        }
      }
    }
    if (i % 5 == 3) {
      i = i + 4;
    } else {
      i = i + 2;
    }
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
